// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should attached an onclick handler passed in 1`] = `
<button
  className="btn"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "steelBlue",
    }
  }
/>
`;

exports[`<Button /> should render a button with a className 1`] = `
<button
  className="btn"
  style={
    Object {
      "backgroundColor": "steelBlue",
    }
  }
/>
`;

exports[`<Button /> should render its children 1`] = `
<button
  className="btn"
  style={
    Object {
      "backgroundColor": "steelBlue",
    }
  }
/>
`;
